# gatos

./: .editorconfig  .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.jsonc  .prettierignore  .prettierrc.json  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FAQ.html  FEATURES.html  FOR-SCIENTISTS.md  LEDGER-COMPARE.md  Makefile  README.md  ROADMAP-XTASK.html  ROADMAP.html  ROADMAP.md  SPEC.html  STAKEHOLDERS.html  TASKLIST.md  TASKS.html  TECH-SPEC.html  USE-CASES.html  deterministic-lua.html  diff.txt  docker-compose.yml  dprint.json  exporter.html  hashmap.json  index.html  opaque-pointers.html  opaque-resolver.html  package-lock.json  package.json  page.json  research-profile.html  (+2 more)
.github/: labels.yml
.github/ISSUES/: 004-xtask-migration.md
.github/workflows/: ci.yml  docs.yml  issue-labeler.yml  label-sync.yml  labeler-backfill.yml  pages-deploy.yml  pages-preview.yml
.tmp/: pr64_threads_page2.json  unresolved_ids.txt
api/graphql/: schema.graphql
assets/: FAQ.md.Co_40XyD.js  FAQ.md.Co_40XyD.lean.js  FAQ.md.CrtWleBJ.js  FAQ.md.CrtWleBJ.lean.js  FAQ.md.DqEQ0Zqd.js  FAQ.md.DqEQ0Zqd.lean.js  FAQ.md.ZwlC81a_.js  FAQ.md.ZwlC81a_.lean.js  FAQ.md.l9trllzF.js  FAQ.md.l9trllzF.lean.js  FAQ.md.qwsPfJ9K.js  FAQ.md.qwsPfJ9K.lean.js  FEATURES.md.B2JxzRDO.js  FEATURES.md.B2JxzRDO.lean.js  FEATURES.md.C8xr4bun.js  FEATURES.md.C8xr4bun.lean.js  FEATURES.md.CcGiO2QB.js  FEATURES.md.CcGiO2QB.lean.js  FEATURES.md.CyGbdUed.js  FEATURES.md.CyGbdUed.lean.js  FEATURES.md.D7f0oX6V.js  FEATURES.md.D7f0oX6V.lean.js  FEATURES.md.DVR62b0f.js  FEATURES.md.DVR62b0f.lean.js  ROADMAP-XTASK.md.3R6sbndr.js  ROADMAP-XTASK.md.3R6sbndr.lean.js  ROADMAP-XTASK.md.BfyCQxSo.js  ROADMAP-XTASK.md.BfyCQxSo.lean.js  ROADMAP-XTASK.md.COfpmubL.js  ROADMAP-XTASK.md.COfpmubL.lean.js  ROADMAP-XTASK.md.D96lyAtM.js  ROADMAP-XTASK.md.D96lyAtM.lean.js  ROADMAP.md.BU1WjE4Z.js  ROADMAP.md.BU1WjE4Z.lean.js  ROADMAP.md.CBH2hhkN.js  ROADMAP.md.CBH2hhkN.lean.js  ROADMAP.md.DL9Fyi-V.js  ROADMAP.md.DL9Fyi-V.lean.js  ROADMAP.md.DNiCZzMq.js  ROADMAP.md.DNiCZzMq.lean.js  (+540 more)
assets/chunks/: framework.De09ol_b.js  theme.B7GruVFS.js
bindings/ffi/: Cargo.toml  README.md
bindings/ffi/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
cli/: export.html  foldc.html  lint.html  policyc.html  pox.html
crates/gatos-echo/: Cargo.toml  README.md
crates/gatos-echo/src/: lib.rs
crates/gatos-graphql/: Cargo.toml
crates/gatos-graphql/src/: lib.rs
crates/gatos-kv/: Cargo.toml  README.md
crates/gatos-kv/src/: lib.rs
crates/gatos-ledger/: Cargo.toml  README.md
crates/gatos-ledger-core/: Cargo.toml  README.md
crates/gatos-ledger-core/src/: lib.rs
crates/gatos-ledger-git/: Cargo.toml  README.md
crates/gatos-ledger-git/src/: audit.rs  event.rs  journal.rs  lib.rs  policy_guard.rs
crates/gatos-ledger/src/: lib.rs
crates/gatos-message-plane/: Cargo.toml  README.md
crates/gatos-message-plane/src/: lib.rs
crates/gatos-mind/: Cargo.toml  README.md
crates/gatos-mind/src/: lib.rs
crates/gatos-policy/: Cargo.toml  README.md
crates/gatos-policy/src/: lib.rs
crates/gatos-ports/: Cargo.toml  README.md
crates/gatos-ports/src/: lib.rs
crates/gatos-privacy/: Cargo.toml  README.md
crates/gatos-privacy/src/: lib.rs
crates/gatos-privacy/tests/: pointer_schema.rs  verified.rs
crates/gatosd/: Cargo.toml  README.md
crates/gatosd/src/: main.rs  message_plane.rs
crates/xtask/: Cargo.toml
decisions/: README.html
decisions/ADR-0001/: DECISION.html  flyingrobots.html
decisions/ADR-0002/: DECISION.html
decisions/ADR-0003/: DECISION.html
diagrams/: api_endpoints.html  architecture.html  data_flow.html  state_management.html
docs/: CODE_QUALITY_CHECK.md  CODE_REVIEW_FIXES.md  CONTRIBUTING.md  FAQ.md  FEATURES.md  ROADMAP-XTASK.md  ROADMAP.md  SPEC.md  STAKEHOLDERS.md  TASKS.md  TECH-SPEC.md  USE-CASES.md  deterministic-lua.md  exporter.md  index.md  ok-real-talk.md  opaque-pointers.md  opaque-resolver.md  research-profile.md  stargate-push-gate.md  why-not-x.md
docs/.vitepress/: config.ts
docs/cli/: export.md  foldc.md  lint.md  policyc.md  pox.md  watch.md
docs/decisions/: ARD-FEEDBACK.md  README.md
docs/diagrams/: api_endpoints.md  architecture.md  data_flow.md  state_management.md
docs/guide/: CHAPTER-001.md  CHAPTER-002.md  CHAPTER-003.md  CHAPTER-004.md  CHAPTER-005.md  CHAPTER-006.md  CHAPTER-007.md  CHAPTER-008.md  CHAPTER-009.md  CHAPTER-010.md  CHAPTER-011.md  CHAPTER-012.md  CHAPTER-013.md  HELLO-OPS.md  HELLO-PRIVACY.md  README.md
docs/issues/: README.md  ledger-event-envelope-signing.md  ledger-git-append-cas.md  ledger-observability.md  ledger-policy-gate-integration.md  ledger-read-windowing.md  ledger-test-harness.md  message-plane-backpressure-concurrency.md  message-plane-docs-sdks.md  message-plane-ledger-core-port.md  message-plane-observability.md  message-plane-pagination-cursors.md  message-plane-publish-path.md  message-plane-rpc-wiring.md
docs/proofs/: proof-of-consensus.md  proof-of-execution.md  proof-of-experiment.md  proof-of-fold.md
docs/schemas/: opaque-resolver.request.schema.json  stargate.config.schema.json  (+1 more)
guide/: CHAPTER-001.html  CHAPTER-002.html  CHAPTER-003.html  CHAPTER-004.html  CHAPTER-005.html  CHAPTER-006.html  CHAPTER-007.html  CHAPTER-008.html  CHAPTER-009.html  CHAPTER-010.html  CHAPTER-011.html  CHAPTER-012.html  HELLO-OPS.html  HELLO-PRIVACY.html  README.html
inspo/: GIT-MIND-REPORT.md  best-of.md  git-kv.md  ledger-kernel.md  libgitledger.md  shiplog.md  wesley.md  what_is_echo.md
pagefind/: pagefind-entry.json  pagefind.en-us_9e92d0dff1905.pf_meta  pagefind.en-us_b955d37f8082b.pf_meta  pagefind.en-us_c0f4396d8815e.pf_meta  pagefind.en-us_f3ec516341e35.pf_meta
proofs/: proof-of-consensus.html  proof-of-execution.html  proof-of-experiment.html  proof-of-fold.html
schemas/: README.md
scripts/: anchors_and_toc.py  diagrams.sh  linkify_chapters.py  linkify_refs.py  migrate_opaque_pointers.py  pins-verify.sh  pins.sh  setup-dev.sh  setup-hooks.sh  test.sh  validate_schemas.sh
(+2740 files in other folders)
