[workspace]
resolver = "2"
members = [
    "crates/gatos-ledger-core",
    "crates/gatos-ledger-git",
    "crates/gatos-ledger",
    "crates/gatos-mind",
    "crates/gatos-echo",
    "crates/gatos-policy",
    "crates/gatos-kv",
    "crates/gatosd",
    "bindings/wasm",
    "bindings/ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["flyingrobots"]
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/gatos"

[workspace.dependencies]
blake3 = "1.8.2"
bincode = "2.0.1"
git2 = "0.18.3"
heapless = "0.8"
hex = "0.4"
libc = "0.2.150"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.8"
wasm-bindgen = "0.2.104"
anyhow = "1.0"
