[workspace]
resolver = "2"
members = [
    "crates/gatos-ledger-core",
    "crates/gatos-ledger-git",
    "crates/gatos-ledger",
    "crates/gatos-mind",
    "crates/gatos-echo",
    "crates/gatos-policy",
    "crates/gatos-kv",
    "crates/gatosd",
    "bindings/wasm",
    "bindings/ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["flyingrobots"]
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/gatos"
documentation = "https://github.com/flyingrobots/gatos/blob/main/README.md"
homepage = "https://github.com/flyingrobots/gatos"

[workspace.dependencies]
blake3 = { version = "1.8.2", default-features = false }
bincode = { version = "2.0.1", default-features = false }
git2 = "0.18.3"
heapless = "~0.8.0"
hex = "~0.4.3"
libc = "0.2.150"
serde = { version = "~1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = "~1.0.145"
serde_with = { version = "~3.15.1", default-features = false, features = ["macros"] }
wasm-bindgen = "0.2.104"
anyhow = "~1.0.100"
smallvec = { version = "1.13.2", default-features = false }
