[workspace]
resolver = "2"
members = [
    "crates/xtask",
    "crates/gatos-ledger-core",
    "crates/gatos-ledger-git",
    "crates/gatos-ledger",
    "crates/gatos-message-plane",
    "crates/gatos-graphql",
    "crates/gatos-echo",
    "crates/gatos-policy",
    "crates/gatos-kv",
    "crates/gatosd",
    "bindings/wasm",
    "bindings/ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["flyingrobots"]
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/gatos"
documentation = "https://github.com/flyingrobots/gatos/blob/main/README.md"
homepage = "https://github.com/flyingrobots/gatos"
rust-version = "1.81"

# Workspace dependency policy:
# - Use tilde requirements (~) to allow patch/minor updates within a compatible series
#   while avoiding surprise major bumps (e.g., "~1.11.0").
[workspace.dependencies]
blake3 = { version = "1.8.2", default-features = false }
bincode = { version = "2.0.1", default-features = false }
git2 = "0.18.3"
heapless = "~0.8.0"
hex = "~0.4.3"
libc = "0.2.150"
serde = { version = "~1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = "~1.0.145"
serde_with = { version = "~3.15.1", default-features = false, features = ["macros"] }
wasm-bindgen = "0.2.104"
anyhow = "~1.0.100"
smallvec = { version = "1.13.2", default-features = false }
regex = "~1.11.0"
jsonschema = "~0.17.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc"] }
serde_ipld_dagcbor = "0.6.1"
cid = { version = "0.11.1", default-features = false, features = ["serde", "std", "blake3"] }
multihash = { version = "0.18.1", default-features = false, features = ["blake3", "std"] }
