[package]
name = "gatos-ffi-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "C-compatible FFI bindings for GATOS core libraries"
homepage = "https://github.com/flyingrobots/gatos"

[lib]
crate-type = ["cdylib"] # C dynamic library

[dependencies]
libc = { workspace = true } # For c_char - pinned in workspace
