[package]
name = "gatos-ffi-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "C-compatible FFI bindings for GATOS core libraries"
homepage = "https://github.com/flyingrobots/gatos"
keywords = ["gatos", "ffi", "bindings"]
categories = ["external-ffi-bindings", "api-bindings"]

[lib]
crate-type = ["cdylib"] # C dynamic library

[dependencies]
libc = { workspace = true } # For c_char - pinned in workspace
gatos-ledger-core = { path = "../../crates/gatos-ledger-core" }
hex = { workspace = true }
