[package]
name = "gatos-graphql"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "GraphQL gateway scaffolding for the GATOS project (ADR-0007)."

[dependencies]
async-trait = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"

[features]
server = ["async-trait", "serde"]

[lib]
path = "src/lib.rs"
