[package]
name = "gatos-ledger-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true, default-features = false }
heapless = { workspace = true } # For no_std collections
bincode = { workspace = true, default-features = false, features = ["alloc", "derive"] } # For serialization
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_with = { workspace = true, default-features = false, features = ["macros"] }
