[package]
name = "gatos-ledger-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Git-backed storage backend for gatos-ledger (no_std core)"
keywords = ["ledger", "git", "storage", "backend"]

[dependencies]
git2 = { workspace = true }
gatos-ledger-core = { version = "0.1.0", path = "../gatos-ledger-core" }
hex = { workspace = true }
blake3 = { workspace = true }
