[package]
name = "gatos-ledger-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Temporary stub for the git-backed ledger backend"

[lib]
name = "gatos_ledger_git"
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
serde_ipld_dagcbor = { workspace = true }
cid = { workspace = true }
git2 = { workspace = true }
tempfile = "3"
multihash = { workspace = true }
gatos-ports = { path = "../gatos-ports" }
thiserror = "1.0"
