[package]
name = "gatos-ledger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GATOS ledger meta-crate with feature-gated core and backend selection"
keywords = ["gatos", "ledger", "git"]
categories = ["data-structures", "development-tools"]

[dependencies]
gatos-ledger-core = { path = "../gatos-ledger-core", optional = true }
gatos-ledger-git = { path = "../gatos-ledger-git", optional = true }

[features]
default = ["git2-backend"]
core-only = ["gatos-ledger-core"]
git2-backend = ["gatos-ledger-git", "gatos-ledger-core"]
