[package]
name = "gatos-message-plane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Placeholder for the GATOS Message Plane (message bus) implementation"
# NOTE: Placeholder metadata until implementation lands; do not publish.
keywords = ["gatos", "message-plane", "git"]
categories = ["network-programming", "data-structures"]

[dependencies]
serde_json = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
