[package]
name = "gatos-mind"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GATOS Message Bus (GMB): commit-backed publish/subscribe"
keywords = ["gatos", "message-bus", "git"]
categories = ["network-programming", "data-structures"]

[dependencies]
