[package]
name = "gatos-mind"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Placeholder for GATOS Message Bus implementation"
# NOTE: Placeholder metadata until implementation lands; do not publish.
keywords = ["gatos", "message-bus", "git"]
categories = ["network-programming", "data-structures"]

[dependencies]
