[package]
name = "gatos-ports"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["flyingrobots"]

[features]
# default: no_std with alloc available from core
std = []
serde = ["dep:serde", "dep:serde_bytes"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
serde_bytes = { version = "0.11", optional = true, default-features = false, features = ["alloc"] }
